--- a/src/app/shared/pago/pago.component.html
+++ b/src/app/shared/pago/pago.component.html
@@ -7,17 +7,9 @@
             <div class="m-3 card">
                 <form [formGroup]="ctaForm" class="m-3">
                     <div class="between">
-                        <div class="col-md-4 mt-3">
-                            <label class="control-label" for="ap_p">Apellido Paterno</label>
+                        <div class="col-md-12 mt-3">
+                            <label class="control-label" for="ap_p">NOMBRE</label>
                             <input class="form-control" id="ap_p" placeholder="Apellido Paterno" formControlName="ap_p" type="text" data-toggle="tooltip" title="*Campo obligatorio">
-                        </div>
-                        <div class="col-md-4 mt-3">
-                            <label class="control-label" for="ap_m">Apellido Materno</label>
-                            <input class="form-control" id="ap_m" placeholder="Apellido Materno" formControlName="ap_m" type="text" data-toggle="tooltip" title="*Campo obligatorio">
-                        </div>
-                        <div class="col-md-4 mt-3">
-                            <label class="control-label" for="nombre">Nombre(s)</label>
-                            <input class="form-control" id="nombre" placeholder="Nombre(s)" formControlName="nombre" type="text" data-toggle="tooltip" title="*Campo obligatorio">
                         </div>
                         <div class="col-md-4 mt-3">
                             <label class="control-label" for="banco">Banco</label>
@@ -27,10 +19,12 @@
                             <label class="control-label" for="clave">Clave Interbancaria</label>
                             <input class="form-control" id="clave" placeholder="Clave Interbancaria" formControlName="clave" type="text" data-toggle="tooltip" title="*Campo obligatorio">
                         </div>
+
                         <div class="col-md-4 mt-3">
                             <label class="control-label" for="correo">Correo</label><br>
                             <input class="form-control form-control-sm" id="correo" placeholder="Correo" formControlName="correo" type="email" data-toggle="tooltip" title="*Campo obligatorio">
                         </div>
+
                         <br>
                     </div>
                 </form>
